--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "core-build": "tsc -p projects/core/tsconfig.json && copyfiles -u 2 projects/core/package.json dist/core",
     "server-build": "tsc -p projects/server/tsconfig.json && copyfiles -u 2 projects/server/package.json dist/server",
     "server-postgres-build": "tsc -p projects/server-postgres/tsconfig.json && copyfiles -u 2 projects/server-postgres/package.json dist/server-postgres",
-    "publish": " npm run build && npm run patch-versions && npm run build && cd dist/core && npm publish  --access public --tag pre-release && cd.. && cd angular && npm publish  --access public --tag pre-release && cd.. && cd server && npm publish  --access public --tag pre-release && cd.. && cd server-postgres &&  npm publish  --access public --tag pre-release",
+    "publish": " npm run build && npm run patch-versions && npm run build && cd dist/core && npm publish  --access public --tag v2.2-lts && cd.. && cd angular && npm publish  --access public --tag v2.2-lts && cd.. && cd server && npm publish  --access public --tag v2.2-lts && cd.. && cd server-postgres &&  npm publish  --access public --tag v2.2-lts",
     "release": " npm run build && npm run patch-versions && npm run build && cd dist/core && npm publish  --access public && cd.. && cd angular && npm publish  --access public && cd.. && cd server && npm publish  --access public  && cd.. && cd server-postgres &&  npm publish  --access public",
     "patch-versions": "cd projects/core && npm version patch && cd.. && cd server && npm version patch && cd.. && cd server-postgres && npm version patch && cd.. && cd..  && cd projects/angular && npm version patch && cd..",
     "node-serve": "./node_modules/.bin/tsc-watch -p tsconfig.server.json --onSuccess \"npm run server:dev-run",
