--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "core-build": "tsc -p projects/core/tsconfig.json && copyfiles -u 2 projects/core/package.json dist/core",
     "server-build": "tsc -p projects/server/tsconfig.json && copyfiles -u 2 projects/server/package.json dist/server",
     "server-postgres-build": "tsc -p projects/server-postgres/tsconfig.json && copyfiles -u 2 projects/server-postgres/package.json dist/server-postgres",
+    "release-core": "npm run core-build && npm run patch-core && npm run core-build && cd dist/core && npm publish  --access public --tag v2.2-lts",
     "publish": " npm run build && npm run patch-versions && npm run build && cd dist/core && npm publish  --access public --tag v2.2-lts && cd.. && cd angular && npm publish  --access public --tag v2.2-lts && cd.. && cd server && npm publish  --access public --tag v2.2-lts && cd.. && cd server-postgres &&  npm publish  --access public --tag v2.2-lts",
     "release": " npm run build && npm run patch-versions && npm run build && cd dist/core && npm publish  --access public && cd.. && cd angular && npm publish  --access public && cd.. && cd server && npm publish  --access public  && cd.. && cd server-postgres &&  npm publish  --access public",
     "patch-versions": "cd projects/core && npm version patch && cd.. && cd server && npm version patch && cd.. && cd server-postgres && npm version patch && cd.. && cd..  && cd projects/angular && npm version patch && cd..",
+    "patch-core":"cd projects/core && npm version patch && cd..",
     "node-serve": "./node_modules/.bin/tsc-watch -p tsconfig.server.json --onSuccess \"npm run server:dev-run",
     "build-server-watch": "tsc -p tsconfig.server.json --watch",
     "server:dev-run": "node --inspect dist-server/src/app/server/server.js",
